--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">NoteTaking</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_add_note">Add</string>
+    <string name="start_label">What do you want to use?</string>
+    <string name="start_btn_room">ROOM</string>
+    <string name="exit">Exit</string>
 </resources>
