Change NoteFragment, getting note from bundle
Change package of NoteFragment,
add NoteFragmentViewModel,
add ViewBinding,
add getting serilizable object of AppNote from arguments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="exit">Exit</string>
     <string name="toolbar_title">Notes</string>
     <string name="toast_message_empty_name_note">Please enter name of your note!</string>
+    <string name="bundle_key_note">note</string>
 </resources>
