--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">NoteTaking</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start_label">What do you want to use?</string>
     <string name="start_btn_room">ROOM</string>
@@ -15,4 +14,6 @@
 
     <string name="bundle_key_note">note</string>
     <string name="toolbar_title">Notes</string>
+    <string name="name_note">Name note</string>
+    <string name="note_text">Note text</string>
 </resources>
