--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NoteTaking</string>
+    <string name="app_name">Keep Notes</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start_label">What do you want to use?</string>
     <string name="start_btn_room">ROOM</string>
