--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start_label">What do you want to use?</string>
     <string name="start_btn_room">ROOM</string>
-    <string name="toast_message_empty_name_note">Please enter name of your note!</string>
+    <string name="toast_message_empty_name_note">Please enter name or text of your note!</string>
     <string name="hint_title_note">Title</string>
     <string name="hint_text_note">Start typing</string>
 
